added shortcut for dmenu_tell

--- a/.i3/config.4
+++ b/.i3/config.4
@@ -250,6 +250,9 @@ bindsym $Altgr+a exec /usr/local/bin/dmenu_xrandr
 # vbox:
 bindsym $Altgr+v exec /usr/local/bin/dmenu_vbox
 
+# tell:
+bindsym $Altgr+t exec /usr/local/bin/dmenu_tell
+
 # screenshot: ImpPt
 bind 107 exec /usr/local/bin/screenshot
  
