--- a/.i3/config.4
+++ b/.i3/config.4
@@ -29,8 +29,8 @@ new_window 1pixel
 # XXX: workspace name will end up in the corresponding bindings.
 
 # ISO 10646 = Unicode
-font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
-#font xft:DejaVu Sans Mono 10
+#font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
+font xft:Bahamas 9
 #font -xos4-terminus-medium-r-*--12-*-*-*-*-*-iso10646-1
 
 ### IPC INTERFACE ###
@@ -389,6 +389,7 @@ bar {
     }
     status_command i3status
     tray_output none
+    font pango:Inconsolata 9
     #mode hide
     #modifier $Win
 }
