--- a/.i3/config.4
+++ b/.i3/config.4
@@ -198,7 +198,8 @@ bindcode Control+$Alt+119 exec dmenu_session
 #bindsym Control+Shift+t exec transset -p
 
 # magnifier:
-bindsym $Altgr+m exec magnifier
+bindsym $Altgr+m exec /usr/bin/x-terminal-emulator -title "mutt" -e mutt
+bindsym $Altgr+Shift+m exec magnifier
 #bindsym Control+Shift+m exec /bin/sh -c mutt
 
 # irssi:
@@ -327,6 +328,7 @@ workspace "1 www" output HDMI1
 
 assign [class="Firefox"]                                "1 www"
 assign [class="^URxvt$" title="irssi"]                  "4 im"
+assign [class="^URxvt$" title="mutt"]                   "5 mail"
 assign [class="Thunderbird"]                            "5 mail"
 assign [class="Liferea"]                                "8 news"
 assign [class="Pcmanfm"]                                "6 files"
