--- a/.i3/config.4
+++ b/.i3/config.4
@@ -189,7 +189,7 @@ bindcode $Alt+9 exec dmenu_run -p ">" -i -nb \#000000 -nf \#FFFFFF -sb \#000000 
 #bindcode Control+$Alt+27 restart
 
 # Control+$Alt+l lock session
-bindcode Control+$Alt+46 exec i3lock -i $HOME/data/images/wallpapers/1.png -p win -n
+bindcode Control+$Alt+46 exec i3lock -i $HOME/data/images/wallpapers/sun.png -n -t
 
 # Control+$Alt+Supr starts a dmenu session menu
 bindcode Control+$Alt+119 exec dmenu_session
