--- a/.i3/config.4
+++ b/.i3/config.4
@@ -190,7 +190,7 @@ bindcode $Alt+9 exec dmenu_run -p ">" -i -nb \#000000 -nf \#FFFFFF -sb \#000000 
 
 # Control+$Alt+l lock session
 #bindcode Control+$Alt+46 exec i3lock -i $HOME/data/images/wallpapers/sun.png -n -t
-bindcode Control+$Alt+46 exec i3lock -n -c 000000
+bindcode Control+$Alt+46 exec  i3lock -i $HOME/data/images/wallpapers/lock.png
 
 # Control+$Alt+Supr starts a dmenu session menu
 bindcode Control+$Alt+119 exec dmenu_session
