--- a/.i3/config.4
+++ b/.i3/config.4
@@ -1,7 +1,7 @@
 ######################################################################################
 # Last review            Thu 20 Dec 2012 07:00:35 AM CST
 # #####################################################################################
-#  vim: set ts=8 sw=4 tw=0 ft=conf : 
+#  vim: set ts=8 sw=4 tw=0 ft=conf :
 #  TODO 02-03-2011 09:57 => xbindkeys
 
 # ###################################
@@ -74,10 +74,10 @@ bindcode $Win+44 focus down
 bindcode $Win+45 focus up
 bindcode $Win+46 focus right
 # alternatively, you can use the cursor keys
-bindsym $Win+Left focus left
-bindsym $Win+Down focus down
-bindsym $Win+Up focus up
-bindsym $Win+Right focus right
+#bindsym $Win+Left focus left
+#bindsym $Win+Down focus down
+#bindsym $Win+Up focus up
+#bindsym $Win+Right focus right
 
 # scratchpad, only for i3.4
 # send to the scratchpad ($Win+Insert)
@@ -108,10 +108,10 @@ bindcode $Win+Shift+44 move down
 bindcode $Win+Shift+45 move up
 bindcode $Win+Shift+46 move right
 # (alternatively, you can use the cursor keys:)
-bindsym $Win+Shift+Left move left
-bindsym $Win+Shift+Down move down
-bindsym $Win+Shift+Up move up
-bindsym $Win+Shift+Right move right
+#bindsym $Win+Shift+Left move left
+#bindsym $Win+Shift+Down move down
+#bindsym $Win+Shift+Up move up
+#bindsym $Win+Shift+Right move right
 
 # Move Container (Mod3+Shift+h/j/k/l)
 #bindcode $Alt+$Win+Shift+43 focus parent; move left
@@ -140,6 +140,9 @@ bindcode $Win+30 workspace 17 work
 bindcode $Win+31 workspace 18 work
 bindcode $Win+32 workspace 19 work
 bindcode $Win+33 workspace 20 work
+
+bindsym $Win+Right workspace next
+bindsym $Win+Left workspace prev
 
 # Move to Workspaces
 bindcode $Win+Shift+10 move workspace 1 www
@@ -179,8 +182,8 @@ bindsym Control+Shift+g exec /usr/bin/x-terminal-emulator
 
 # $Alt+Esc dmenu_run
 # -sf purple
-bindcode $Alt+9 exec dmenu_run -p ">" -i -nb \#000000 -nf \#FFFFFF -sb \#000000 -sf \#7541B9
-#bind $Alt+9 exec dmenu_run
+#bindcode $Alt+9 exec dmenu_run -p ">" -i -nb \#000000 -nf \#FFFFFF -sb \#000000 -sf \#7541B9
+bind $Alt+9 exec /usr/local/bin/dmenu_run
 
 # Control+$Alt+e exits i3
 #bindcode Control+$Alt+26 exit
@@ -190,7 +193,7 @@ bindcode $Alt+9 exec dmenu_run -p ">" -i -nb \#000000 -nf \#FFFFFF -sb \#000000 
 
 # Control+$Alt+l lock session
 #bindcode Control+$Alt+46 exec i3lock -i $HOME/data/images/wallpapers/sun.png -n -t
-bindcode Control+$Alt+46 exec  i3lock -i $HOME/data/images/wallpapers/lock.png
+bindcode Control+$Alt+46 exec  i3lock -i $HOME/.data/images/wallpapers/sun.png -n -t &
 
 # Control+$Alt+Supr starts a dmenu session menu
 bindcode Control+$Alt+119 exec dmenu_session
@@ -208,7 +211,7 @@ bindsym $Altgr+Shift+m exec magnifier
 bindsym $Altgr+i exec /usr/bin/x-terminal-emulator -title "irssi" -e bash -c "irssi --config=<(gpg -d $HOME/.irssi/config.gpg)"
 #bindsym Control+Shift+i exec /bin/sh -c irssi
 
-# pms: 
+# pms:
 bindsym $Altgr+r exec /usr/bin/x-terminal-emulator -e ncmpcpp
 #bindsym Control+Shift+p exec sh -c pms
 
@@ -257,7 +260,7 @@ bindsym $Altgr+t exec /usr/local/bin/dmenu_tell
 
 # screenshot: ImpPt
 bind 107 exec /usr/local/bin/screenshot
- 
+
 # record_desktop: TODO 18-08-2012 22:33 >> make it work again
 bind Control+Shift+35 exec /usr/local/bin/screencast_record stop
 bind Control+35 exec /usr/local/bin/screencast_record start
@@ -267,23 +270,23 @@ bind Control+35 exec /usr/local/bin/screencast_record start
 
 mode "resize" {
         # These bindings trigger as soon as you enter the resize mode
-        
+
         # They resize the border in the direction you pressed, e.g.
         # when pressing left, the window is resized so that it has
         # more space on its left
-        
+
         bindsym h resize grow left 10 px
         #bindsym Shift+h resize grow left 10 px
- 
+
         #bindsym t resize shrink up 10 px
         bindsym j resize shrink up 10 px
 
         bindsym k resize grow up 10 px
         #bindsym Shift+k resize grow down 10 px
-        
+
         #bindsym l resize grow right 10 px
         bindsym l resize shrink left 10 px
-        
+
         #Exit resize mode
         bindsym $Altgr+x mode "default"
 }
