--- a/.i3/config.4
+++ b/.i3/config.4
@@ -286,6 +286,9 @@ mode "resize" {
 
         #bindsym l resize grow right 10 px
         bindsym l resize shrink left 10 px
+
+        #Exit resize mode
+        bindsym $Altgr+x mode "default"
 }
 
 # Enter resize mode
