--- a/.i3/config.4
+++ b/.i3/config.4
@@ -320,6 +320,7 @@ for_window [class="^URxvt$" instance="scratchpad"] border 1pixel; move scratchpa
 for_window [class="^TeamViewer.exe$"] floating enable
 for_window [title="^TeamViewer$"] floating enable
 for_window [title="- TeamViewer -"] floating enable
+for_window [class="Firefox" title="^About Nightly"] floating enable
 
 # popup_during_fullscreen <smart|ignore|leave_fullscreen> smart is default
 #popup_during_fullscreen ignore
