todo: assign new shortcuts for screencast_*

--- a/.i3/config.4
+++ b/.i3/config.4
@@ -265,9 +265,9 @@ bindsym $Altgr+t exec /usr/local/bin/dmenu_tell
 # screenshot: ImpPt
 bind 107 exec /usr/local/bin/screenshot
 
-# record_desktop: TODO 18-08-2012 22:33 >> make it work again
-bind Control+Shift+35 exec /usr/local/bin/screencast_record stop
-bind Control+35 exec /usr/local/bin/screencast_record start
+# record_desktop: TODO 29-09-2013 00:50 >> assign new shortcuts
+#bind Control+Shift+35 exec /usr/local/bin/screencast_record stop
+#bind Control+35 exec /usr/local/bin/screencast_record start
 
 # go to the urgent flag set
 #bindsym $Win+x [urgent=latest] focus
