i3: add keyboard layout shortcut

--- a/.i3/config.4
+++ b/.i3/config.4
@@ -243,6 +243,9 @@ bind $Altgr+21 exec /usr/local/bin/music-control next
 #bind Control+Shift+59 exec mpc prev
 bind $Altgr+34 exec /usr/local/bin/music-control previous
 
+# shift input keyboard layouts
+bindcode $Alt+62 exec /usr/local/bin/shift-keyboard-layout
+
 # kills the current app
 bindcode $Altgr+45 kill
 
