add aurora firefox quick help window, to floating windows

--- a/.i3/config.4
+++ b/.i3/config.4
@@ -323,6 +323,7 @@ for_window [class="^TeamViewer.exe$"] floating enable
 for_window [title="^TeamViewer$"] floating enable
 for_window [title="- TeamViewer -"] floating enable
 for_window [class="Firefox" title="^About Nightly"] floating enable
+for_window [class="Firefox" title="^About Aurora"] floating enable
 
 # popup_during_fullscreen <smart|ignore|leave_fullscreen> smart is default
 #popup_during_fullscreen ignore
